ikiwiki (3.05) UNRELEASED; urgency=low

  * debhelper v7.2; rules file minimisation.
  * template: Load templates in scan mode.
    This is potentially expensive, but is necessary so that meta and tag
    directives, and other links on templates affect the page using the
    template reliably.
  * goto: Fix redirect to comments.

 -- Joey Hess <joeyh@debian.org>  Sun, 15 Feb 2009 20:11:57 -0500

ikiwiki (3.04) unstable; urgency=low

  * 404: New plugin which lets you use the IkiWiki CGI script as
    an Apache 404 handler, to give the behaviour of various other wiki
    engines where visiting a nonexistent page provides you with a link
    to create it. (smcv)
  * Factor out redundant code into goto plugin. (smcv)
  * Work around XML::Atom strangeness that results in double-encoded posts.
    (smcv) 
  * Updated German translation (Kai Wasserbäch). Closes: #514251
  * Fix unusual --setup --post-commit command line option combo.
  * Create any missing directory necessary to put the wrapper
    file into. Closes: #514384
  * shortcut: If default_pageext is set, first look for
    shortcuts.default_pageext.
  * Allow comments, rename, remove, and attachment plugins to be used
    even if the editpage plugin is disabled.

 -- Joey Hess <joeyh@debian.org>  Sat, 14 Feb 2009 02:27:14 -0500

ikiwiki (3.03) unstable; urgency=low

  * Avoid feeding decoded unicode to Term::ReadLine. Closes: 512169
  * blogspam: Log spam info on failure in debug mode.
  * Remove nonstandard css. Closes: #512378
  * blogspam: Fix use of blogspam_options and blogspam_server config settings.
  * comments: If comment content checks fail, store the comment
    (in .ikiwiki/comments_pending) for moderator review.
  * comments: Add a moderation web interface, which admins can
    access via their Preferences page.
  * git: Fix malformed utf8 received from git.
  * meta: New "updated" metadata specifies a fake modification time for a
    page, to be output into RSS and Atom feeds. (smcv)