@@ -22,6 +22,10 @@ lost because it didn't have its own bug to track it.  Now it does :).  -- [[Will
 >>
 >> So, yeah, I think this patch is complete. :)  -- [[Will]]
 
+>>> Thanks, [[applied|done]], but I added a noextension parameter,
+>>> since having keepextension allow files with no extension didn't make
+>>> sense. Also, made it work for pages in subdirs.. --[[Joey]] 
+
     diff --git a/IkiWiki.pm b/IkiWiki.pm
     index 8d728c9..1bd46a9 100644
     --- a/IkiWiki.pm
