@@ -6,6 +6,7 @@ ikiwiki (3.05) UNRELEASED; urgency=low
     directives, and other links on templates affect the page using the
     template reliably.
   * goto: Fix redirect to comments.
+  * Add noextension parameter to htmlize hooks to support, eg, Makefile.
 
  -- Joey Hess <joeyh@debian.org>  Sun, 15 Feb 2009 20:11:57 -0500
 
